--- a/slides/index.html
+++ b/slides/index.html
@@ -93,30 +93,37 @@
 				<section class="live-demo">
 					<h4>Combien de tweet bdxio par jour de la semaine?</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/6yhuz40k4chkjeccnr9t79gd1.js" id="asciicast-6yhuz40k4chkjeccnr9t79gd1" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Qui tweet le plus sur bdxio?</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/4y64uiespou888m8ccq0mfo1m.js" id="asciicast-4y64uiespou888m8ccq0mfo1m" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Qui a le plus de followers?</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/bmd787xqfsmkc9wlcejmi889h.js" id="asciicast-bmd787xqfsmkc9wlcejmi889h" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Le tweet le plus retweeté?</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/4kusl2bdt9osf36zwofjk4nc9.js" id="asciicast-4kusl2bdt9osf36zwofjk4nc9" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Les tweets loins du lieu (44.802614, -0.588054)</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/3i87bua0s0zxuwtdl4r4hbpgq.js" id="asciicast-3i87bua0s0zxuwtdl4r4hbpgq" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Cas concret : une table utilisateur</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/42k5ykfnkaakxntq3w5himpn3.js" id="asciicast-42k5ykfnkaakxntq3w5himpn3" async></script>
 				</section>
 				<section class="live-demo">
 					<h4>Ok avec 3 lignes, mais avec des millions?</h4>
 					<iframe data-src="http://localhost:57575/"></iframe>
+					<script type="text/javascript" data-src="https://asciinema.org/a/2pqn0vosioisqjtj6yqpistz8.js" id="asciicast-2pqn0vosioisqjtj6yqpistz8" async></script>
 				</section>
 				<section>
 					<h2>Questions</h2>
