--- a/slides/index.html
+++ b/slides/index.html
@@ -128,7 +128,11 @@
 				<section>
 					<h2>Questions</h2>
 					<div style="display: flex; align-items: center">
-						<p style="font-size: 90%">Code et slides de la présentation : github.com/ybonnel/bdxio-postgres</p>
+
+						<div style="font-size: 90%">
+							<p>Code de la présentation : github.com/ybonnel/bdxio-postgres</p>
+							<p>Slides : </p>
+						</div>
 						<img style="width: 40%" src="images/questions.gif">
 					</div>
 				</section>
