Add slides link

--- a/slides/index.html
+++ b/slides/index.html
@@ -131,7 +131,7 @@
 
 						<div style="font-size: 90%">
 							<p>Code de la présentation : github.com/ybonnel/bdxio-postgres</p>
-							<p>Slides : </p>
+							<p>Slides : ybonnel.github.io/bdxio-postgres/</p>
 						</div>
 						<img style="width: 40%" src="images/questions.gif">
 					</div>
